clusters/homelab/apps/authelia/ingress-simple.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: authelia
  namespace: authelia
  annotations:
    haproxy.org/ssl-redirect: "false"
spec:
  ingressClassName: haproxy
  rules:
  - host: auth.daddyshome.fr
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: authelia
            port:
              number: 80
