clusters/homelab/apps/authelia/virtualservice-patch.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: authelia-https
  namespace: authelia
spec:
  gateways:
  - authelia-gateway
  hosts:
  - authx.daddyshome.fr
  http:
  - match:
    - port: 443
    route:
    - destination:
        host: authelia-headless
        port:
          number: 9091
