clusters/homelab/apps/authelia/virtualservice.yaml
---
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: authelia
  namespace: authelia
spec:
  hosts:
  - auth.daddyshome.fr
  gateways:
  - istio-ingress/homelab-mtls-authelia-gateway
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        host: authelia
        port:
          number: 80
